## =========
Version 1.9-11 (Development version)


## =========
Version 1.8-10

Misc:
  - Updated help pages: seqeconstraint, seqtree, distree2dot
  - Added required basic packages to the import statements to
    comply with R v3.3 requirements
  - One additional exported alias to a TraMineR internal function:
    TraMineRInternalSeqgbar.


## =========
Version 1.8-9

New function:
  - pcfilter(): convenience function to define the coloring
    filter options to be passed as 'filter' argument to seqpcplot().

Changes in existing functions:
  - seqpm(): New sep argument to allow searching for string patterns when
    states are not labelled with single characters.
  - seqpcplot():
    - New argument 'seed' to control the jittering.
    - The 'filter' argument can now simply be a scalar, in which case
      the 'minfreq' filter is applied with this numeric value as threshold.
      See also the new function seqpcfilter().
    - New argument 'missing' to control  whether and how to display missing
      values.

Bug fixes:
  - seqformat(): fixed error occurring when converting from STS to TSE
    with a tevent matrix containing empty strings (i.e. "")
  - dissmfacw(): reported F values now obtained by dividing the within
    discrepancy in the denominator by (n-m), where n is the sample size
    and m the total number of predictors (contrasts for categorical
    factors). Up to here (n-m-1) was mistakenly used
    (Reported by Vicente Ponsoda.)

Misc:
  - Two additional exported aliases to TraMineR internal functions:
    TraMineRInternalSeqeage and and TraMineRInternalLegend.

## =========
Version 1.8-8

Bug fixes:
  - seqecreate(): an error is thrown when events are not grouped
    by id in inputted TSE data. (Reported by Nicolas Jay).
    This requirement is now specified in seqecreate help page.

Misc:
  - exported alias functions allowing other packages to access TraMineR
    internal functions (see ?TraMineRInternalLayout).

## =========
Version 1.8-7
