@@ -1,6 +1,6 @@
 Package: TraMineR
 Version: 1.9-11
-Date: 2015-07-14
+Date: 2015-08-01
 Title: Trajectory Miner: a Toolbox for Exploring and Rendering Sequences
 Authors@R: c(
   person("Alexis", "Gabadinho", role = c("aut", "cph")),
@@ -10,7 +10,7 @@ Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "cph"),
   email = "gilbert.ritschard@unige.ch"))
 Depends: R (>= 2.8.1),
-Imports: utils, RColorBrewer, boot, graphics, grDevices, stats
+Imports: utils, RColorBrewer, boot, graphics, grDevices, stats, Hmisc
 Suggests: cluster, xtable
 Description: Toolbox for the manipulation, description and rendering of sequences, and more generally the mining of sequence data in the field of social sciences. Although the toolbox is primarily intended for analyzing state or event sequences that describe life courses such as family formation histories or professional careers, its features also apply to many other kinds of categorical sequence data. It accepts many different sequence representations as input and provides tools for converting sequences from one format to another. It offers several functions for describing and rendering sequences, for computing distances between sequences with different metrics (among which optimal matching), original dissimilarity-based analysis tools, and simple functions for extracting the most frequent subsequences and identifying the most discriminating ones among them. A user's guide can be found on the TraMineR web page.
 License: GPL (>= 2)
