@@ -3,6 +3,7 @@ importFrom("graphics", "abline", "arrows", "axis", "barplot", "box", "hist", "la
 importFrom("grDevices", "col2rgb", "colorRamp", "dev.off", "rgb")
 importFrom("stats", "chisq.test", "complete.cases", "density", "dnorm", "dunif", "formula", "median", "model.frame", "model.matrix", "na.omit", "na.pass", "pnorm", "qnorm", "quantile", "reshape", "runif", "terms", "weighted.mean", "xtabs")
 importFrom("utils", "combn", "download.file", "read.table", packageDescription, packageVersion)
+importFrom("Hmisc", "errbar")
 
 export(
 	alphabet,
